<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reg_registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/editImagenMascota"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="@color/colorButton"
                    app:civ_border_width="2dp" />

                <ImageButton
                    android:id="@+id/botonSeleccionImagen"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/round_button"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </FrameLayout>

            <EditText
                android:id="@+id/textApellidoReg"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/reg_apellido"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textNombreReg"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <EditText
                android:id="@+id/textNombreReg"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/reg_nombre"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textApellidoReg"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <EditText
                android:id="@+id/textCorreoReg"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/reg_correo"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNombreReg" />

            <EditText
                android:id="@+id/textContraReg"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/reg_contra"
                android:inputType="textPassword"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCorreoReg" />

            <EditText
                android:id="@+id/textIdentiReg"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/reg_identif"
                android:inputType="text|number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinnerIdeReg"
                app:layout_constraintTop_toBottomOf="@+id/textContraReg" />

            <TextView
                android:id="@+id/textUbiRegistradaReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/reg_ubi"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnObtenerUbiReg" />

            <Spinner
                android:id="@+id/spinnerIdeReg"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                app:layout_constraintEnd_toStartOf="@+id/textIdentiReg"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContraReg" />

            <Button
                android:id="@+id/btnObtenerUbiReg"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/reg_obtener_ubi"
                android:textAllCaps="false"
                android:onClick="toObtenerUbicacion"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textIdentiReg" />

            <Button
                android:id="@+id/btnRegistrarseReg"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/reg_registrarse"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:onClick="registrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textUbiRegistradaReg" />

            <Button
                android:id="@+id/btnAtrasReg"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/reg_regresar"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:onClick="toAtras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegistrarseReg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>